ParseR/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> functions
Rule 2     functions -> functions function
Rule 3     functions -> function
Rule 4     function -> type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
Rule 5     statements -> statements COMMA NEWLINE statement
Rule 6     statements -> statement
Rule 7     statement -> empty
Rule 8     statement -> declaration
Rule 9     statement -> assignment
Rule 10    statement -> conversion
Rule 11    statement -> CHECK
Rule 12    statement -> UNTIL
Rule 13    statement -> function_call
Rule 14    statement -> RETURN
Rule 15    parameters -> parameter COMMA parameters
Rule 16    parameters -> parameter
Rule 17    parameter -> type NAME
Rule 18    parameter -> empty
Rule 19    function_call -> NAME LRNDBRACKET variants RRNDBRACKET
Rule 20    function_call -> NAME LRNDBRACKET RRNDBRACKET
Rule 21    RETURN -> return expression
Rule 22    empty -> <empty>
Rule 23    declaration -> type variants LASIGNMENT decimal_expression
Rule 24    declaration -> field type type variants LASIGNMENT decimal_expression
Rule 25    variants -> variant variants
Rule 26    variants -> variant
Rule 27    variant -> NAME
Rule 28    variant -> NAME indices
Rule 29    indices -> LSQBRACKET expression expression RSQBRACKET
Rule 30    type -> tiny
Rule 31    type -> small
Rule 32    type -> normal
Rule 33    type -> big
Rule 34    expression -> math_expression
Rule 35    expression -> decimal_expression
Rule 36    expression -> variant
Rule 37    expression -> robot_command
Rule 38    expression -> ext_assig
Rule 39    expression -> function_call
Rule 40    ext_assig -> assig
Rule 41    assig -> expression RASIGNMENT variant
Rule 42    assig -> variant LASIGNMENT expression
Rule 43    math_expression -> expression PLUS expression
Rule 44    math_expression -> expression MINUS expression
Rule 45    math_expression -> expression MULT expression
Rule 46    math_expression -> expression DIV expression
Rule 47    math_expression -> expression MORE expression
Rule 48    math_expression -> expression LESS expression
Rule 49    math_expression -> expression MOREEQ expression
Rule 50    math_expression -> expression LESSEQ expression
Rule 51    math_expression -> LRNDBRACKET expression PLUS expression RRNDBRACKET
Rule 52    math_expression -> LRNDBRACKET expression MINUS expression RRNDBRACKET
Rule 53    math_expression -> LRNDBRACKET expression MULT expression RRNDBRACKET
Rule 54    math_expression -> LRNDBRACKET expression DIV expression RRNDBRACKET
Rule 55    math_expression -> LRNDBRACKET expression MORE expression RRNDBRACKET
Rule 56    math_expression -> LRNDBRACKET expression LESS expression RRNDBRACKET
Rule 57    math_expression -> LRNDBRACKET expression MOREEQ expression RRNDBRACKET
Rule 58    math_expression -> LRNDBRACKET expression LESSEQ expression RRNDBRACKET
Rule 59    decimal_const -> DECIMAL
Rule 60    decimal_expression -> decimal_const
Rule 61    decimal_expression -> PLUS decimal_const
Rule 62    decimal_expression -> MINUS decimal_const
Rule 63    robot_command -> rl
Rule 64    robot_command -> rr
Rule 65    robot_command -> go
Rule 66    robot_command -> sonar
Rule 67    robot_command -> compass
Rule 68    assignment -> variant LASIGNMENT expression
Rule 69    assignment -> expression RASIGNMENT variant
Rule 70    assignment -> variant LASIGNMENT expression RASIGNMENT variant
Rule 71    assignment -> expression RASIGNMENT variant LASIGNMENT expression
Rule 72    conversion -> MINUS NAME
Rule 73    conversion -> PLUS NAME
Rule 74    UNTIL -> until expression do NEWLINE statements DOT
Rule 75    CHECK -> check expression do NEWLINE statements DOT
Rule 76    declaration -> type error
Rule 77    declaration -> type variants LASIGNMENT error
Rule 78    declaration -> field type type error
Rule 79    declaration -> field type type variants LASIGNMENT error
Rule 80    declaration -> declaration error
Rule 81    indices -> LSQBRACKET error RSQBRACKET
Rule 82    indices -> LSQBRACKET error expression RSQBRACKET
Rule 83    indices -> LSQBRACKET expression error RSQBRACKET
Rule 84    indices -> LSQBRACKET error error RSQBRACKET
Rule 85    indices -> indices error
Rule 86    assignment -> variant LASIGNMENT error
Rule 87    assignment -> error LASIGNMENT expression
Rule 88    assignment -> error RASIGNMENT variant
Rule 89    assignment -> expression RASIGNMENT error
Rule 90    assignment -> error LASIGNMENT expression RASIGNMENT variant
Rule 91    assignment -> variant LASIGNMENT error RASIGNMENT variant
Rule 92    assignment -> variant LASIGNMENT expression RASIGNMENT error
Rule 93    assignment -> error LASIGNMENT error RASIGNMENT variant
Rule 94    assignment -> variant LASIGNMENT error RASIGNMENT error
Rule 95    assignment -> error LASIGNMENT expression RASIGNMENT error
Rule 96    assignment -> error RASIGNMENT variant LASIGNMENT expression
Rule 97    assignment -> expression RASIGNMENT error LASIGNMENT expression
Rule 98    assignment -> expression RASIGNMENT variant LASIGNMENT error
Rule 99    assignment -> error RASIGNMENT error LASIGNMENT expression
Rule 100   assignment -> expression RASIGNMENT error LASIGNMENT error
Rule 101   assignment -> error RASIGNMENT variant LASIGNMENT error
Rule 102   conversion -> MINUS error
Rule 103   conversion -> PLUS error
Rule 104   conversion -> conversion error
Rule 105   UNTIL -> until error do NEWLINE statements DOT
Rule 106   UNTIL -> UNTIL error
Rule 107   CHECK -> check error do NEWLINE statements DOT
Rule 108   CHECK -> CHECK error
Rule 109   function -> type error LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
Rule 110   function -> type NAME LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
Rule 111   function -> type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
Rule 112   function -> type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
Rule 113   function -> type error LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
Rule 114   function -> type NAME LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
Rule 115   function -> type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
Rule 116   function -> type error LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
Rule 117   function -> type error LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
Rule 118   function -> type NAME LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
Rule 119   function -> type error LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
Rule 120   function -> type NAME LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
Rule 121   function -> type error LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
Rule 122   function -> type error LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
Rule 123   function -> function error
Rule 124   RETURN -> return error
Rule 125   RETURN -> RETURN error

Terminals, with rules where they appear

COMMA                : 5 15
DECIMAL              : 59
DIV                  : 46 54
DOT                  : 4 74 75 105 107 109 110 111 112 113 114 115 116 117 118 119 120 121 122
LASIGNMENT           : 23 24 42 68 70 71 77 79 86 87 90 91 92 93 94 95 96 97 98 99 100 101
LESS                 : 48 56
LESSEQ               : 50 58
LRNDBRACKET          : 19 20 51 52 53 54 55 56 57 58
LSQBRACKET           : 4 29 81 82 83 84 109 110 111 112 113 114 115 116 117 118 119 120 121 122
MINUS                : 44 52 62 72 102
MORE                 : 47 55
MOREEQ               : 49 57
MULT                 : 45 53
NAME                 : 4 17 19 20 27 28 72 73 110 111 112 114 115 118 120
NEWLINE              : 4 4 4 5 74 75 105 107 109 109 109 110 110 110 111 111 111 112 112 112 113 113 113 114 114 114 115 115 115 116 116 116 117 117 117 118 118 118 119 119 119 120 120 120 121 121 121 122 122 122
PLUS                 : 43 51 61 73 103
RASIGNMENT           : 41 69 70 71 88 89 90 91 92 93 94 95 96 97 98 99 100 101
RRNDBRACKET          : 19 20 51 52 53 54 55 56 57 58
RSQBRACKET           : 4 29 81 82 83 84 109 110 111 112 113 114 115 116 117 118 119 120 121 122
begin                : 4 109 110 112 113 116 118 122
big                  : 33
check                : 75 107
compass              : 67
do                   : 74 75 105 107
end                  : 4 109 110 111 113 114 117 119
error                : 76 77 78 79 80 81 82 83 84 84 85 86 87 88 89 90 91 92 93 93 94 94 95 95 96 97 98 99 99 100 100 101 101 102 103 104 105 106 107 108 109 110 111 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 119 120 120 120 121 121 121 122 122 122 123 124 125
field                : 24 78 79
go                   : 65
normal               : 32
return               : 21 124
rl                   : 63
rr                   : 64
small                : 31
sonar                : 66
tiny                 : 30
until                : 74 105

Nonterminals, with rules where they appear

CHECK                : 11 108
RETURN               : 14 125
UNTIL                : 12 106
assig                : 40
assignment           : 9
conversion           : 10 104
decimal_const        : 60 61 62
decimal_expression   : 23 24 35
declaration          : 8 80
empty                : 7 18
expression           : 21 29 29 41 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 68 69 70 71 71 74 75 82 83 87 89 90 92 95 96 97 97 98 99 100
ext_assig            : 38
function             : 2 3 123
function_call        : 13 39
functions            : 1 2
indices              : 28 85
math_expression      : 34
parameter            : 15 16
parameters           : 4 15 109 111 112 115 116 117 121
program              : 0
robot_command        : 37
statement            : 5 6
statements           : 4 5 74 75 105 107 109 110 111 112 113 114 115 116 117 118 119 120 121 122
type                 : 4 17 23 24 24 76 77 78 78 79 79 109 110 111 112 113 114 115 116 117 118 119 120 121 122
variant              : 25 26 36 41 42 68 69 70 70 71 86 88 90 91 91 92 93 94 96 98 101
variants             : 19 23 24 25 77 79

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . functions
    (2) functions -> . functions function
    (3) functions -> . function
    (4) function -> . type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (109) function -> . type error LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (110) function -> . type NAME LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (111) function -> . type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (112) function -> . type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (113) function -> . type error LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (114) function -> . type NAME LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (115) function -> . type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (116) function -> . type error LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (117) function -> . type error LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (118) function -> . type NAME LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (119) function -> . type error LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (120) function -> . type NAME LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (121) function -> . type error LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (122) function -> . type error LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (123) function -> . function error
    (30) type -> . tiny
    (31) type -> . small
    (32) type -> . normal
    (33) type -> . big

    tiny            shift and go to state 5
    small           shift and go to state 6
    normal          shift and go to state 7
    big             shift and go to state 8

    program                        shift and go to state 1
    functions                      shift and go to state 2
    function                       shift and go to state 3
    type                           shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> functions .
    (2) functions -> functions . function
    (4) function -> . type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (109) function -> . type error LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (110) function -> . type NAME LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (111) function -> . type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (112) function -> . type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (113) function -> . type error LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (114) function -> . type NAME LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (115) function -> . type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (116) function -> . type error LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (117) function -> . type error LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (118) function -> . type NAME LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (119) function -> . type error LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (120) function -> . type NAME LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (121) function -> . type error LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (122) function -> . type error LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (123) function -> . function error
    (30) type -> . tiny
    (31) type -> . small
    (32) type -> . normal
    (33) type -> . big

    $end            reduce using rule 1 (program -> functions .)
    tiny            shift and go to state 5
    small           shift and go to state 6
    normal          shift and go to state 7
    big             shift and go to state 8

    function                       shift and go to state 9
    type                           shift and go to state 4

state 3

    (3) functions -> function .
    (123) function -> function . error

    tiny            reduce using rule 3 (functions -> function .)
    small           reduce using rule 3 (functions -> function .)
    normal          reduce using rule 3 (functions -> function .)
    big             reduce using rule 3 (functions -> function .)
    $end            reduce using rule 3 (functions -> function .)
    error           shift and go to state 10


state 4

    (4) function -> type . NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (109) function -> type . error LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (110) function -> type . NAME LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (111) function -> type . NAME LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (112) function -> type . NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (113) function -> type . error LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (114) function -> type . NAME LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (115) function -> type . NAME LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (116) function -> type . error LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (117) function -> type . error LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (118) function -> type . NAME LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (119) function -> type . error LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (120) function -> type . NAME LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (121) function -> type . error LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (122) function -> type . error LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE

    NAME            shift and go to state 11
    error           shift and go to state 12


state 5

    (30) type -> tiny .

    NAME            reduce using rule 30 (type -> tiny .)
    error           reduce using rule 30 (type -> tiny .)
    tiny            reduce using rule 30 (type -> tiny .)
    small           reduce using rule 30 (type -> tiny .)
    normal          reduce using rule 30 (type -> tiny .)
    big             reduce using rule 30 (type -> tiny .)


state 6

    (31) type -> small .

    NAME            reduce using rule 31 (type -> small .)
    error           reduce using rule 31 (type -> small .)
    tiny            reduce using rule 31 (type -> small .)
    small           reduce using rule 31 (type -> small .)
    normal          reduce using rule 31 (type -> small .)
    big             reduce using rule 31 (type -> small .)


state 7

    (32) type -> normal .

    NAME            reduce using rule 32 (type -> normal .)
    error           reduce using rule 32 (type -> normal .)
    tiny            reduce using rule 32 (type -> normal .)
    small           reduce using rule 32 (type -> normal .)
    normal          reduce using rule 32 (type -> normal .)
    big             reduce using rule 32 (type -> normal .)


state 8

    (33) type -> big .

    NAME            reduce using rule 33 (type -> big .)
    error           reduce using rule 33 (type -> big .)
    tiny            reduce using rule 33 (type -> big .)
    small           reduce using rule 33 (type -> big .)
    normal          reduce using rule 33 (type -> big .)
    big             reduce using rule 33 (type -> big .)


state 9

    (2) functions -> functions function .
    (123) function -> function . error

    tiny            reduce using rule 2 (functions -> functions function .)
    small           reduce using rule 2 (functions -> functions function .)
    normal          reduce using rule 2 (functions -> functions function .)
    big             reduce using rule 2 (functions -> functions function .)
    $end            reduce using rule 2 (functions -> functions function .)
    error           shift and go to state 10


state 10

    (123) function -> function error .

    error           reduce using rule 123 (function -> function error .)
    tiny            reduce using rule 123 (function -> function error .)
    small           reduce using rule 123 (function -> function error .)
    normal          reduce using rule 123 (function -> function error .)
    big             reduce using rule 123 (function -> function error .)
    $end            reduce using rule 123 (function -> function error .)


state 11

    (4) function -> type NAME . LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (110) function -> type NAME . LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (111) function -> type NAME . LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (112) function -> type NAME . LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (114) function -> type NAME . LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (115) function -> type NAME . LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (118) function -> type NAME . LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (120) function -> type NAME . LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE

    LSQBRACKET      shift and go to state 13


state 12

    (109) function -> type error . LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (113) function -> type error . LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (116) function -> type error . LSQBRACKET parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (117) function -> type error . LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (119) function -> type error . LSQBRACKET error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (121) function -> type error . LSQBRACKET parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (122) function -> type error . LSQBRACKET error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE

    LSQBRACKET      shift and go to state 14


state 13

    (4) function -> type NAME LSQBRACKET . parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (110) function -> type NAME LSQBRACKET . error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (111) function -> type NAME LSQBRACKET . parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (112) function -> type NAME LSQBRACKET . parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (114) function -> type NAME LSQBRACKET . error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (115) function -> type NAME LSQBRACKET . parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (118) function -> type NAME LSQBRACKET . error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (120) function -> type NAME LSQBRACKET . error RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (15) parameters -> . parameter COMMA parameters
    (16) parameters -> . parameter
    (17) parameter -> . type NAME
    (18) parameter -> . empty
    (30) type -> . tiny
    (31) type -> . small
    (32) type -> . normal
    (33) type -> . big
    (22) empty -> .

    error           shift and go to state 17
    tiny            shift and go to state 5
    small           shift and go to state 6
    normal          shift and go to state 7
    big             shift and go to state 8
    COMMA           reduce using rule 22 (empty -> .)
    RSQBRACKET      reduce using rule 22 (empty -> .)

    type                           shift and go to state 15
    parameters                     shift and go to state 16
    parameter                      shift and go to state 18
    empty                          shift and go to state 19

state 14

    (109) function -> type error LSQBRACKET . parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (113) function -> type error LSQBRACKET . error RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (116) function -> type error LSQBRACKET . parameters RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (117) function -> type error LSQBRACKET . parameters RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (119) function -> type error LSQBRACKET . error RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (121) function -> type error LSQBRACKET . parameters RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE
    (122) function -> type error LSQBRACKET . error RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (15) parameters -> . parameter COMMA parameters
    (16) parameters -> . parameter
    (17) parameter -> . type NAME
    (18) parameter -> . empty
    (30) type -> . tiny
    (31) type -> . small
    (32) type -> . normal
    (33) type -> . big
    (22) empty -> .

    error           shift and go to state 20
    tiny            shift and go to state 5
    small           shift and go to state 6
    normal          shift and go to state 7
    big             shift and go to state 8
    COMMA           reduce using rule 22 (empty -> .)
    RSQBRACKET      reduce using rule 22 (empty -> .)

    type                           shift and go to state 15
    parameters                     shift and go to state 21
    parameter                      shift and go to state 18
    empty                          shift and go to state 19

state 15

    (17) parameter -> type . NAME

    NAME            shift and go to state 22


state 16

    (4) function -> type NAME LSQBRACKET parameters . RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (111) function -> type NAME LSQBRACKET parameters . RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (112) function -> type NAME LSQBRACKET parameters . RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (115) function -> type NAME LSQBRACKET parameters . RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE

    RSQBRACKET      shift and go to state 23


state 17

    (110) function -> type NAME LSQBRACKET error . RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (114) function -> type NAME LSQBRACKET error . RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (118) function -> type NAME LSQBRACKET error . RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (120) function -> type NAME LSQBRACKET error . RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE

    RSQBRACKET      shift and go to state 24


state 18

    (15) parameters -> parameter . COMMA parameters
    (16) parameters -> parameter .

    COMMA           shift and go to state 25
    RSQBRACKET      reduce using rule 16 (parameters -> parameter .)


state 19

    (18) parameter -> empty .

    COMMA           reduce using rule 18 (parameter -> empty .)
    RSQBRACKET      reduce using rule 18 (parameter -> empty .)


state 20

    (113) function -> type error LSQBRACKET error . RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (119) function -> type error LSQBRACKET error . RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (122) function -> type error LSQBRACKET error . RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE

    RSQBRACKET      shift and go to state 26


state 21

    (109) function -> type error LSQBRACKET parameters . RSQBRACKET begin NEWLINE statements DOT NEWLINE end NEWLINE
    (116) function -> type error LSQBRACKET parameters . RSQBRACKET begin NEWLINE statements DOT NEWLINE error NEWLINE
    (117) function -> type error LSQBRACKET parameters . RSQBRACKET error NEWLINE statements DOT NEWLINE end NEWLINE
    (121) function -> type error LSQBRACKET parameters . RSQBRACKET error NEWLINE statements DOT NEWLINE error NEWLINE

    RSQBRACKET      shift and go to state 27


state 22

    (17) parameter -> type NAME .

    COMMA           reduce using rule 17 (parameter -> type NAME .)
    RSQBRACKET      reduce using rule 17 (parameter -> type NAME .)


state 23

    (4) function -> type NAME LSQBRACKET parameters RSQBRACKET . begin NEWLINE statements DOT NEWLINE end NEWLINE
    (111) function -> type NAME LSQBRACKET parameters RSQBRACKET . error NEWLINE statements DOT NEWLINE end NEWLINE
    (112) function -> type NAME LSQBRACKET parameters RSQBRACKET . begin NEWLINE statements DOT NEWLINE error NEWLINE
    (115) function -> type NAME LSQBRACKET parameters RSQBRACKET . error NEWLINE statements DOT NEWLINE error NEWLINE

    begin           shift and go to state 28
    error           shift and go to state 29


state 24

    (110) function -> type NAME LSQBRACKET error RSQBRACKET . begin NEWLINE statements DOT NEWLINE end NEWLINE
    (114) function -> type NAME LSQBRACKET error RSQBRACKET . error NEWLINE statements DOT NEWLINE end NEWLINE
    (118) function -> type NAME LSQBRACKET error RSQBRACKET . begin NEWLINE statements DOT NEWLINE error NEWLINE
    (120) function -> type NAME LSQBRACKET error RSQBRACKET . error NEWLINE statements DOT NEWLINE error NEWLINE

    begin           shift and go to state 31
    error           shift and go to state 30


state 25

    (15) parameters -> parameter COMMA . parameters
    (15) parameters -> . parameter COMMA parameters
    (16) parameters -> . parameter
    (17) parameter -> . type NAME
    (18) parameter -> . empty
    (30) type -> . tiny
    (31) type -> . small
    (32) type -> . normal
    (33) type -> . big
    (22) empty -> .

    tiny            shift and go to state 5
    small           shift and go to state 6
    normal          shift and go to state 7
    big             shift and go to state 8
    COMMA           reduce using rule 22 (empty -> .)
    RSQBRACKET      reduce using rule 22 (empty -> .)

    parameter                      shift and go to state 18
    parameters                     shift and go to state 32
    type                           shift and go to state 15
    empty                          shift and go to state 19

state 26

    (113) function -> type error LSQBRACKET error RSQBRACKET . begin NEWLINE statements DOT NEWLINE end NEWLINE
    (119) function -> type error LSQBRACKET error RSQBRACKET . error NEWLINE statements DOT NEWLINE end NEWLINE
    (122) function -> type error LSQBRACKET error RSQBRACKET . begin NEWLINE statements DOT NEWLINE error NEWLINE

    begin           shift and go to state 34
    error           shift and go to state 33


state 27

    (109) function -> type error LSQBRACKET parameters RSQBRACKET . begin NEWLINE statements DOT NEWLINE end NEWLINE
    (116) function -> type error LSQBRACKET parameters RSQBRACKET . begin NEWLINE statements DOT NEWLINE error NEWLINE
    (117) function -> type error LSQBRACKET parameters RSQBRACKET . error NEWLINE statements DOT NEWLINE end NEWLINE
    (121) function -> type error LSQBRACKET parameters RSQBRACKET . error NEWLINE statements DOT NEWLINE error NEWLINE

    begin           shift and go to state 36
    error           shift and go to state 35


state 28

    (4) function -> type NAME LSQBRACKET parameters RSQBRACKET begin . NEWLINE statements DOT NEWLINE end NEWLINE
    (112) function -> type NAME LSQBRACKET parameters RSQBRACKET begin . NEWLINE statements DOT NEWLINE error NEWLINE

    NEWLINE         shift and go to state 37


state 29

    (111) function -> type NAME LSQBRACKET parameters RSQBRACKET error . NEWLINE statements DOT NEWLINE end NEWLINE
    (115) function -> type NAME LSQBRACKET parameters RSQBRACKET error . NEWLINE statements DOT NEWLINE error NEWLINE

    NEWLINE         shift and go to state 38


state 30

    (114) function -> type NAME LSQBRACKET error RSQBRACKET error . NEWLINE statements DOT NEWLINE end NEWLINE
    (120) function -> type NAME LSQBRACKET error RSQBRACKET error . NEWLINE statements DOT NEWLINE error NEWLINE

    NEWLINE         shift and go to state 39


state 31

    (110) function -> type NAME LSQBRACKET error RSQBRACKET begin . NEWLINE statements DOT NEWLINE end NEWLINE
    (118) function -> type NAME LSQBRACKET error RSQBRACKET begin . NEWLINE statements DOT NEWLINE error NEWLINE

    NEWLINE         shift and go to state 40


state 32

    (15) parameters -> parameter COMMA parameters .

    RSQBRACKET      reduce using rule 15 (parameters -> parameter COMMA parameters .)


state 33

    (119) function -> type error LSQBRACKET error RSQBRACKET error . NEWLINE statements DOT NEWLINE end NEWLINE

    NEWLINE         shift and go to state 41


state 34

    (113) function -> type error LSQBRACKET error RSQBRACKET begin . NEWLINE statements DOT NEWLINE end NEWLINE
    (122) function -> type error LSQBRACKET error RSQBRACKET begin . NEWLINE statements DOT NEWLINE error NEWLINE

    NEWLINE         shift and go to state 42


state 35

    (117) function -> type error LSQBRACKET parameters RSQBRACKET error . NEWLINE statements DOT NEWLINE end NEWLINE
    (121) function -> type error LSQBRACKET parameters RSQBRACKET error . NEWLINE statements DOT NEWLINE error NEWLINE

    NEWLINE         shift and go to state 43


state 36

    (109) function -> type error LSQBRACKET parameters RSQBRACKET begin . NEWLINE statements DOT NEWLINE end NEWLINE
    (116) function -> type error LSQBRACKET parameters RSQBRACKET begin . NEWLINE statements DOT NEWLINE error NEWLINE

    NEWLINE         shift and go to state 44


state 37
